--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,11 @@
 #app.yaml
-runtime: python37
+runtime: python39
+# entrypoint: gunicorn -b :$PORT main:app
 
 env_variables:
   CLOUD_SQL_USERNAME: booker
   CLOUD_SQL_PASSWORD: booker2022
   CLOUD_SQL_DATABASE_NAME: bookerDB
   CLOUD_SQL_CONNECTION_NAME: bangkit-booker-352402:asia-southeast2:bangkit-booker
+  CLOUD_SQL_HOST_NAME: 34.101.56.220
+
