--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,17 @@
 #app.yaml
-runtime: python39
+runtime: python
+threadsafe: yes
+env: flex
+
+resources:
+  cpu: 1
+  memory_gb: 2
+  disk_size_gb: 20
+
+runtime_config:
+    python_version: 3
 # entrypoint: gunicorn -b :$PORT main:app
+
 
 env_variables:
   CLOUD_SQL_USERNAME: booker
