--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask==2.1.2
-numpy==1.22.4
-pandas==1.4.2
+Flask==2.0.3
+gunicorn==20.1.0
+numpy==1.19.5
+pandas==1.1.5
 PyJWT==2.4.0
 PyMySQL==1.0.2
-gunicorn==20.1.0
+tensorflow==2.6.2
 
