--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.0.3
 gunicorn==20.1.0
-numpy==1.19.5
+numpy==1.21.6
 pandas==1.1.5
 PyJWT==2.4.0
 PyMySQL==1.0.2
+onnxruntime==1.11.1 
 # tensorflow==2.6.2
